tests/asm/error/header_unclosed_name_2nd.s
.comment "hell yeah"
.name "yea

h

live	%1
